fix navbar postioning on mobile

--- a/css/nav.css
+++ b/css/nav.css
@@ -20,6 +20,7 @@ nav{
     display: flex;
     width: 40%;
     justify-content: space-around;
+    
 
 }
 .nav-links li{
@@ -77,6 +78,9 @@ nav{
 
 .nav-active{
     transform: translateX(0%);
+    z-index: 1;
+    width: 100%;
+    height: 100%;
 }
 
 @keyframes navLinkFade{
